sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:4: error: illegal start of simple expression
    for (i <- (n-2) to 0 by -1)) {
                               ^